Fixed style error on mobile with input date

--- a/private/shared/css/style_guide.css
+++ b/private/shared/css/style_guide.css
@@ -125,7 +125,6 @@ input[type="date"] {
   width: 100%;
   height: 42px;
   cursor: text;
-  padding: 0 3rem 0 1.25rem;
   border: none;
   border-radius: 0.25em;
   color: #010116;
@@ -134,9 +133,17 @@ input[type="date"] {
   box-shadow: 1px 1px 3px 0 #01011680 inset;
 }
 
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+input[type="number"] {
+  padding: 0 3rem 0 1.25rem;
+}
+
 .input_group_container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 form input:hover {
